objects/PCM_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Name__c</fullName>
        <label>Allocation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLM_Size_Type__c</fullName>
        <label>BLM Size Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Connect__c</fullName>
        <label>Board Connect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Height__c</fullName>
        <label>Body Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Length__c</fullName>
        <label>Body Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Width__c</fullName>
        <label>Body Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonding__c</fullName>
        <label>Bonding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacitor_QTY__c</fullName>
        <label>Capacitor QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacitor_Type__c</fullName>
        <label>Capacitor Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Tech__c</fullName>
        <label>Carrier Tech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_ID__c</fullName>
        <label>Catalog ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chips_Per_MOD__c</fullName>
        <label>Chips Per MOD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constant_Name__c</fullName>
        <label>Constant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant_Value__c</fullName>
        <label>Constant Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Package__c</fullName>
        <label>Custom Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dicing__c</fullName>
        <label>Dicing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encapsulation__c</fullName>
        <label>Encapsulation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab__c</fullName>
        <label>Fab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hermetic__c</fullName>
        <label>Hermetic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer_Count__c</fullName>
        <label>Layer Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer_of_Metal__c</fullName>
        <label>Layer of Metal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Free__c</fullName>
        <label>Lead Free</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Pitch__c</fullName>
        <label>Lead Pitch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Width__c</fullName>
        <label>Line Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Layer__c</fullName>
        <label>Mask Layer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_C4_Pitch__c</fullName>
        <label>Minimum C4 Pitch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFactor__c</fullName>
        <label>PFactor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PN__c</fullName>
        <externalId>true</externalId>
        <label>PN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Number__c</fullName>
        <label>PT Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PT003330</fullName>
                </value>
                <value>
                    <fullName>PT003612</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_IO_Count__c</fullName>
        <label>Package IO Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_IO_Pitch__c</fullName>
        <label>Package IO Pitch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_IO__c</fullName>
        <label>Package IO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Technology__c</fullName>
        <label>Package Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passives__c</fullName>
        <label>Passives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <label>Process Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14LPM</fullName>
                </value>
                <value>
                    <fullName>14LPP</fullName>
                </value>
                <value>
                    <fullName>CSOI7RF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signal_IO__c</fullName>
        <label>Signal IO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solder_Tech__c</fullName>
        <label>Solder Tech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solder_Type__c</fullName>
        <label>Solder Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solder__c</fullName>
        <label>Solder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subst_IO_Pitch__c</fullName>
        <label>Subst IO Pitch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subst_Layers__c</fullName>
        <label>Subst Layers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subst_Material__c</fullName>
        <label>Subst Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subst_Type__c</fullName>
        <label>Subst Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Platform__c</fullName>
        <label>Test Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thermal_IO__c</fullName>
        <label>Thermal IO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thermal_OPTS__c</fullName>
        <label>Thermal OPTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underfill__c</fullName>
        <label>Underfill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Lower__c</fullName>
        <label>Volume Lower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Mult__c</fullName>
        <label>Volume Mult</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Upper__c</fullName>
        <label>Volume Upper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wafer_Size__c</fullName>
        <label>Wafer Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wire_Bond_Material__c</fullName>
        <label>Wire Bond Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PCM Cost</label>
    <listViews>
        <fullName>ALLOCATION</fullName>
        <columns>NAME</columns>
        <columns>Allocation__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Allocation_Name__c</columns>
        <columns>Year__c</columns>
        <columns>Quarter__c</columns>
        <columns>Wafer_Size__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>PT_Number__c</columns>
        <columns>Process_Technology__c</columns>
        <columns>Layer_of_Metal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PCM_Cost__c.Allocation</value>
        </filters>
        <filters>
            <field>Wafer_Size__c</field>
            <operation>equals</operation>
            <value>200</value>
        </filters>
        <label>ALLOCATION</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allocation__c</columns>
        <columns>Allocation_Name__c</columns>
        <columns>Cost__c</columns>
        <columns>Product_Type__c</columns>
        <columns>PT_Number__c</columns>
        <columns>Catalog_ID__c</columns>
        <columns>Version__c</columns>
        <columns>Solder_Type__c</columns>
        <columns>Wafer_Size__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Year__c</columns>
        <columns>Quarter__c</columns>
        <columns>Bonding__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BONDING</fullName>
        <columns>NAME</columns>
        <columns>Catalog_ID__c</columns>
        <columns>Fab__c</columns>
        <columns>Bonding__c</columns>
        <columns>Solder__c</columns>
        <columns>Solder_Type__c</columns>
        <columns>Quarter__c</columns>
        <columns>Year__c</columns>
        <columns>Cost__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PCM_Cost__c.Bonding</value>
        </filters>
        <label>BONDING</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MASK_LAYER</fullName>
        <columns>NAME</columns>
        <columns>Process_Technology__c</columns>
        <columns>Fab__c</columns>
        <columns>Quarter__c</columns>
        <columns>Year__c</columns>
        <columns>Mask_Layer__c</columns>
        <columns>Cost__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PCM_Cost__c.Mask_Layer</value>
        </filters>
        <label>MASK LAYER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RAW_WAFER</fullName>
        <columns>NAME</columns>
        <columns>Process_Technology__c</columns>
        <columns>Wafer_Size__c</columns>
        <columns>Fab__c</columns>
        <columns>Quarter__c</columns>
        <columns>Year__c</columns>
        <columns>Cost__c</columns>
        <columns>Version__c</columns>
        <columns>PT_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PCM_Cost__c.Raw_Wafer</value>
        </filters>
        <filters>
            <field>PT_Number__c</field>
            <operation>equals</operation>
            <value>PT003668</value>
        </filters>
        <label>RAW WAFER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WAFER_PROCESSING</fullName>
        <columns>NAME</columns>
        <columns>Process_Technology__c</columns>
        <columns>Fab__c</columns>
        <columns>Wafer_Size__c</columns>
        <columns>Layer_of_Metal__c</columns>
        <columns>Quarter__c</columns>
        <columns>Year__c</columns>
        <columns>Cost__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PCM_Cost__c.Wafer_Processing</value>
        </filters>
        <label>WAFER PROCESSING</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCMC-{0000000000}</displayFormat>
        <label>PCM Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PCM Costs</pluralLabel>
    <recordTypes>
        <fullName>Allocation</fullName>
        <active>true</active>
        <description>Allocation</description>
        <label>Allocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bonding</fullName>
        <active>true</active>
        <label>Bonding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cost_DECAP_REF</fullName>
        <active>true</active>
        <label>Cost DECAP REF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cost_LID_REF</fullName>
        <active>true</active>
        <label>Cost LID REF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cost_Module_BA_REF</fullName>
        <active>true</active>
        <label>Cost Module BA REF</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cost_Sub_REF</fullName>
        <active>true</active>
        <label>Cost Sub REF</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSP_Dicing</fullName>
        <active>true</active>
        <label>DSP Dicing</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSP_Factor</fullName>
        <active>true</active>
        <label>DSP Factor</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSP_GroupB</fullName>
        <active>true</active>
        <label>DSP GroupB</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSP_Picking</fullName>
        <active>true</active>
        <label>DSP Picking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Encapsulation</fullName>
        <active>false</active>
        <label>Encapsulation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mask_Layer</fullName>
        <active>true</active>
        <label>Mask Layer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_BA_ASM</fullName>
        <active>true</active>
        <label>Module BA ASM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_BA_CCVOL</fullName>
        <active>true</active>
        <label>Module BA CCVOL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_BA_DCAPS_ASM</fullName>
        <active>true</active>
        <label>Module BA DCAPS ASM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_BA_LID_ASM</fullName>
        <active>true</active>
        <label>Module BA LID ASM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_BI_Hour</fullName>
        <active>true</active>
        <label>Module BI Hour</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_Test_Hour</fullName>
        <active>true</active>
        <label>Module Test Hour</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module_Test_SBT</fullName>
        <active>true</active>
        <label>Module Test SBT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rate_Constants</fullName>
        <active>true</active>
        <label>Rate Constants</label>
    </recordTypes>
    <recordTypes>
        <fullName>Raw_Wafer</fullName>
        <active>true</active>
        <label>Raw Wafer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SUB_FIN_CC</fullName>
        <active>true</active>
        <label>SUB FIN CC</label>
    </recordTypes>
    <recordTypes>
        <fullName>SUB_FIN_CCVOL</fullName>
        <active>true</active>
        <label>SUB FIN CCVOL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wafer_Processing</fullName>
        <active>true</active>
        <label>Wafer Processing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wafer_Test_GEN</fullName>
        <active>true</active>
        <label>Wafer Test GEN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wafer_Test_Hour</fullName>
        <active>true</active>
        <label>Wafer Test Hour</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>